--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-zinc-900 text-zinc-300;
+  }
+
+  h1 {
+    @apply text-[67.34px] leading-none;
+  }
+
+  h2 {
+    @apply text-[50.52px] leading-none;
+  }
+
+  h3 {
+    @apply text-[37.90px] leading-none;
+  }
+
+  h4 {
+    @apply text-[28.43px] leading-none;
+  }
+
+  h5 {
+    @apply text-[21.33px] leading-none;
+  }
+
+  p {
+    @apply text-[16px];
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .swiper {
+    @apply h-[35vh];
+  }
+
+  #main.swiper {
+    @apply h-[70vh];
+  }
+
+  /* .swiper .swiper-slide {
+    @apply border;
+  } */
+
+  .swiper .swiper-button-prev,
+  .swiper-button-next {
+    @apply h-[40px] w-[40px] rounded-full bg-zinc-400 text-sm text-[10px] opacity-50 !important;
+  }
+
+  .swiper .swiper-pagination-bullet-active {
+    @apply bg-red-500;
+  }
+}
+
+:root {
+  --swiper-navigation-color: rgb(212212216);
+  --swiper-navigation-size: 20px !important;
 }
